# Chinese_Chess

./: CMakeLists.txt  Chinese_Chess_With_AI.c  Chinese_Chess_With_AI.cpp  README.md  cmake_script.txt  single_file.c  single_file.cpp
include/: ai.hpp  board.hpp  constants.hpp  extra_funcs.hpp  moves_gen.hpp  piece.hpp  version_console.hpp  version_gui.hpp
src/: ai.cpp  board.cpp  extra_funcs.cpp  main.cpp  moves_gen.cpp
